# agent-sandbox

./: .coderabbit.yaml  .gitignore  .goreleaser.yaml  .nwa-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  INSTALL-gke.md  INSTALL-kind.md  INSTALL-vscode.md  Makefile  OWNERS  README.md  RELEASE.md  SECURITY_CONTACTS  buf.yaml  cloudbuild-check-links.yaml  cloudbuild.yaml  codegen.go  go.mod  go.sum  lychee.toml  netlify.toml  new-feature-guide.md  roadmap.md  tools.mod  tools.sum
.github/: copilot-instructions.md  (+2 more)
clients/integrations/deepagents/: README.md  pyproject.toml
clients/integrations/deepagents/deepagents_k8s_agent_sandbox/: lifecycle_manager.py  sandbox.py  settings.py
clients/integrations/deepagents/tests/unit/: conftest.py  test_lifecycle_manager.py  test_sandbox.py
clients/integrations/mcp-server/: Dockerfile  README.md  pyproject.toml
clients/integrations/mcp-server/k8s_agent_sandbox_mcp_server/: app.py  server.py  settings.py  utils.py
clients/integrations/mcp-server/k8s_agent_sandbox_mcp_server/resources/: __init__.py  sandboxes.py
clients/integrations/mcp-server/k8s_agent_sandbox_mcp_server/tools/: __init__.py  create_sandbox.py  delete_sandbox.py  download_file.py  execute_command.py  upload_file.py
clients/integrations/mcp-server/tests/unit/: conftest.py
clients/integrations/mcp-server/tests/unit/test_resources/: test_get_sandboxes.py
clients/integrations/mcp-server/tests/unit/test_settings/: test_env_variables.py
clients/integrations/mcp-server/tests/unit/test_tools/: test_create_sandbox.py  test_delete_sandbox.py  test_download_file.py  test_execute_command.py  test_upload_file.py
clients/python/agentic-sandbox-client/: .gitignore  GCP.md  README.md  otel-collector-config.yaml.example  pyproject.toml  python-counter-pool.yaml  python-counter-template.yaml  python-sandbox-template.yaml  python-sandbox-warmpool.yaml  test_client.py  test_computer_use_extension.py  test_podsnapshot_extension.py
clients/python/agentic-sandbox-client/agentic_sandbox/: __init__.py  sandbox_client.py
clients/python/agentic-sandbox-client/agentic_sandbox/extensions/: README.md
clients/python/agentic-sandbox-client/agentic_sandbox/integrations/: __init__.py  base.py  python_sandbox.py  sandbox_settings.py  sandbox_utils.py
clients/python/agentic-sandbox-client/agentic_sandbox/integrations/executor/: __init__.py  base.py  computer_use.py  python.py
clients/python/agentic-sandbox-client/agentic_sandbox/integrations/sandbox_utils/: __init__.py  computer_use_sandbox.py  python_sandbox.py  sandbox_settings.py  tools.py
clients/python/agentic-sandbox-client/docs/integrations/: README.md  adk.md  crewai.md  langchain.md
clients/python/agentic-sandbox-client/gateway-kind/: README.md  gateway-kind.yaml  python-sandbox-template.yaml  run-test-kind.sh
clients/python/agentic-sandbox-client/k8s_agent_sandbox/: __init__.py  async_connector.py  async_k8s_helper.py  async_sandbox.py  async_sandbox_client.py  connector.py  constants.py  exceptions.py  k8s_helper.py  metrics.py  models.py  pod_metadata.py  sandbox.py  sandbox_client.py  trace_manager.py  utils.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/commands/: __init__.py  async_command_executor.py  command_executor.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/extensions/: README.md  computer_use.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/files/: async_filesystem.py  filesystem.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/gke_extensions/: __init__.py  podsnapshot.md  podsnapshot_client.py  test_podsnapshot_client.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/gke_extensions/snapshots/: README.md  podsnapshot_client.py  sandbox_with_snapshot_support.py  snapshot_engine.py  utils.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/integrations/: __init__.py  sandbox_settings.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/sandbox/: __init__.py  async_.py  operations_tracker.py  sync.py
clients/python/agentic-sandbox-client/k8s_agent_sandbox/sandbox_env/: README.md  __init__.py  gymnasium_env.py  reward_fn.py  reward_fns.py
clients/python/agentic-sandbox-client/sandbox-router/: Dockerfile  README.md  requirements.in  requirements.txt  sandbox_router.py  sandbox_router.yaml  test_sandbox_router.py
clients/python/agentic-sandbox-client/sandbox_router/: Dockerfile  README.md  gateway.yaml  sandbox_router.yaml
clients/python/agentic-sandbox-client/test_utils/integrations/: sandbox_tests_base.py
clients/python/agentic-sandbox-client/tests/: conftest.py
clients/python/agentic-sandbox-client/tests/integrations/: adk_sandbox.py  adk_sandbox_code_executor.py  conftest.py  langchain_sandbox.py  test_sandbox_utils.py
examples/agent-sandbox-rl/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/agent-sandbox-rl/agent_sandbox_rl/: __init__.py  async_fleet.py  capacity.py  cluster.py  config.py  constants.py  exceptions.py  fleet.py  handles.py  observability.py  placement.py  preflight.py  prepull.py  registry_rewrite.py  resources.py  sizing.py  sources.py  strategies.py
examples/agent-sandbox-rl/agent_sandbox_rl/adapters/: __init__.py  r2egym.py  swebench.py
examples/agent-sandbox-rl/docs/: architecture.md  design.md  strategies.md
examples/agent-sandbox-rl/examples/: deepswe_eval_nb.ipynb  plan_capacity.py  rl_integration.md  run_swebench_fleet.py
examples/agent-sandbox-rl/performance_reports/: .gitignore  README.md  sample_rl_rollout.json  sample_rl_rollout.md  sliding_10tasks_20260620-233643.json  sliding_10tasks_20260620-233643.txt
examples/agent-sandbox-rl/tests/: conftest.py  loadtest.py  run_full_swebench_benchmark.py  test_async_fleet.py  test_capacity.py  test_cluster.py  test_config.py  test_fleet.py  test_loadtest.py  test_observability.py  test_placement.py  test_preflight.py  test_prepull.py  test_r2egym_adapter.py  test_registry_rewrite.py  test_resources.py  test_run_full_swebench_benchmark.py  test_sizing.py  test_sources.py  test_strategies.py  test_swebench.py
(+1218 files in other folders)
