[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepagents-k8s-agent-sandbox"
description = "LangChain DeepAgents backend for Kubernetes agent-sandbox."
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "deepagents>=0.6.0,<0.7.0",
    "k8s-agent-sandbox~=0.5.0",
    "langgraph-cli[inmem]>=0.4.30",
]

[project.urls]
Homepage = "https://github.com/kubernetes-sigs/agent-sandbox/clients/integrations/deepagents"
Repository = "https://github.com/kubernetes-sigs/agent-sandbox"
Documentation = "https://github.com/kubernetes-sigs/agent-sandbox/clients/integrations/deepagents"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["deepagents_k8s_agent_sandbox*"]
exclude = ["tests*"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-asyncio",
]
