[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-agent-sandbox-mcp-server"
version = "0.1.0"
description = "MCP server for the Kubernetes Agent Sandbox."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "k8s-agent-sandbox[async]~=0.5.0",
  "pydantic-settings~=2.14.2",
  "fastapi~=0.139.0",
  "fastmcp[apps]~=3.4.4",
]

[tool.setuptools.packages.find]
include = ["k8s_agent_sandbox_mcp_server*"]
exclude = [
    "tests*",
]

[tool.setuptools.exclude-package-data]
# setuptools_scm automatically bundles tracked files as package data.
# We need to explicitly exclude test directories and files from being bundled.
"*" = ["test/*", "tests/*", "*/test/*", "*/tests/*", "test_*.py", "*_test.py"]

[tool.setuptools_scm]
root = "../../.."

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-asyncio",
]

