[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-agent-sandbox"
dynamic = ["version"]
description = "A client library to interact with the Agentic Sandbox on Kubernetes."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "kubernetes",
    "requests",
    "pydantic",
]

[project.urls]
"Homepage" = "https://github.com/kubernetes-sigs/agent-sandbox"
"Bug Tracker" = "https://github.com/kubernetes-sigs/agent-sandbox/issues"

[tool.setuptools.packages.find]
# This tells setuptools to include the 'k8s_agent_sandbox'
# package, ignore other directories like 'sandbox_router', and exclude tests.
include = ["k8s_agent_sandbox*"]
exclude = [
    "*.test",
    "*.test.*",
    "*.tests",
    "*.tests.*",
    "k8s_agent_sandbox.test*",
    "k8s_agent_sandbox.*.test*"
]

[tool.setuptools.exclude-package-data]
# setuptools_scm automatically bundles tracked files as package data.
# We need to explicitly exclude test directories and files from being bundled.
"*" = ["test/*", "tests/*", "*/test/*", "*/tests/*", "test_*.py", "*_test.py"]

[tool.setuptools_scm]
root = "../../.."

[project.optional-dependencies]
langchain = [
    "langchain",
]
adk = [
    "google-adk",
]
crewai = [
    "crewai[tools]",
async = [
    "httpx",
    "kubernetes_asyncio",
]
test = [
    "k8s_agent_sandbox[langchain]",
    "k8s_agent_sandbox[adk]",
    "k8s_agent_sandbox[crewai]",
    "pytest",
    "pytest-xdist",
    "pytest-asyncio",
    "httpx",
    "kubernetes_asyncio",
]
tracing = [
    "opentelemetry-api~=1.39.0",
    "opentelemetry-sdk~=1.39.0",
    "opentelemetry-exporter-otlp~=1.39.0",
    "opentelemetry-instrumentation-requests~=0.60b0",
]

[tool.pytest.ini_options]
testpaths = ["k8s_agent_sandbox"]
